# sparseutils

./: Makefile  PKG-INFO  README  README.md  check  setup.cfg  tox.ini
sparseutils/: mksparse.py  sparsemap-ddr.py  sparsemap.py
sparseutils.egg-info/: SOURCES.txt  entry_points.txt  pbr.json  top_level.txt
tests/: implementations.yarn  mksparse.yarn  shell_lib  sparsemap.yarn
