[metadata]
name = sparseutils
author = Richard Ipsum
author-email = richardipsum@fastmail.co.uk
summary = Utilities for interacting with sparse files
description-file = README
license = GPL3
classifier = 
	Development Status :: 3 - Alpha
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Operating System :: POSIX :: Linux
	Programming Language :: Python :: 3
	Topic :: Utilities
keywords = 
	sparse

[files]
packages = 
	sparseutils

[entry_points]
console_scripts = 
	sparsemap = sparseutils.sparsemap:main
	mksparse = sparseutils.mksparse:main

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

